# PyCharm

./: .gitignore  HTTP  SQL_comands  my_resume1.html
Algoriphms/: binary_search.py
Python_SQL/: add_users.py  full_example.py  practic_practic.py  test_connection.py  test_sql_python.py
api-test/: api.py
for, while/: budget_analysis.py  calories_burned.py  error_collector.py  for_range_simple4.py  for_квадраты_чисел.py  for_кмч_в_мч.py  reality_no_validation.py  rectangular_patern.py  stair_step_pattern.py  sum_numbers(сумма введенных чисел).py  test.py  test_score_averages.py  triangle_pattern.py  user_squares1(Квадраты чисел 1).py  user_squares2(квадраты чисел 2).py  комиссионные.py  температура.py  тетст.py
functions/: accumlator.py  test-func.py
hexlet-django-blog/: .gitignore
hexlet-flask-example/: .env  Makefile  build.sh  example.py  pyproject.toml  render.yaml  requirements.txt  user_repository.py
hexlet-hello-world/: pyproject.toml  test_script.py
hexlet-hello-world/hexlet_hello_world/: example.py
hexlet-hello-world/my_application/: __init__.py  module.py
hexlet-hello-world/my_application/scripts/: main.py  second_script.py
hexlet-module2/: test-functions.py
hexlet-tree/: filesystem_1.py
html_files/: index.html  practik_html.html  style.css  try_title1.html
if elif else/: age_classifier.py  body_mass_index.py  book_club_glasses.py  calculate_sausages.py  coin_game.py  day_of_week.py  days_in_febrary.py  hit_the_target.py  loan_qualifier_2(and, or, not).py  loan_qualifier_3(and, or, not).py  magical_dates.py  mix_color.py  s_rectangle.py  (+11 more)
(+33 files in other folders)
